--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <link rel="stylesheet" href="styles.css" />
+
     <link
       rel="icon"
       type="image/png"
@@ -16,7 +18,7 @@
   </head>
   <body>
     <main>
-      <article>
+      <article class="container">
         <figure>
           <img src="assets/images/image-omelette.jpeg" alt="omelette picture" />
         </figure>
@@ -33,25 +35,16 @@
         </div>
 
         <section class="preparation">
-          <h4>Preparation time</h4>
+          <h3>Preparation time</h3>
           <ul>
-            <li>
-              <strong>Total:</strong>
-              Approximately 10 minutes
-            </li>
-            <li>
-              <strong>Preparation:</strong>
-              5 minutes
-            </li>
-            <li>
-              <strong>Cooking:</strong>
-              5 minutes
-            </li>
+            <li><strong>Total</strong>: Approximately 10 minutes</li>
+            <li><strong>Preparation</strong>: 5 minutes</li>
+            <li><strong>Cooking</strong>: 5 minutes</li>
           </ul>
         </section>
 
         <section class="ingredients">
-          <h3>Ingredients</h3>
+          <h2>Ingredients</h2>
           <ul>
             <li>2-3 large eggs</li>
             <li>Salt, to taste</li>
@@ -64,7 +57,7 @@
         </section>
 
         <section class="instructions">
-          <h3>Instructions</h3>
+          <h2>Instructions</h2>
           <ol>
             <li>
               <strong> Beat the eggs:</strong>
@@ -100,7 +93,7 @@
         </section>
 
         <section class="nutrition">
-          <h3>Nutrition</h3>
+          <h2>Nutrition</h2>
           <p>
             The table below shows nutritional values per serving without the
             additional fillings.
