--- a/index.html
+++ b/index.html
@@ -36,86 +36,145 @@
 
         <section class="preparation">
           <h3>Preparation time</h3>
-          <ul>
-            <li><strong>Total</strong>: Approximately 10 minutes</li>
-            <li><strong>Preparation</strong>: 5 minutes</li>
-            <li><strong>Cooking</strong>: 5 minutes</li>
-          </ul>
+          <div class="prep-list">
+            <div class="prep-item">
+              <span class="dot"></span>
+              <p><strong>Total:</strong> Approximately 10 minutes</p>
+            </div>
+
+            <div class="prep-item">
+              <span class="dot"></span>
+              <p><strong>Preparation:</strong> 5 minutes</p>
+            </div>
+
+            <div class="prep-item">
+              <span class="dot"></span>
+              <p><strong>Cooking:</strong> 5 minutes</p>
+            </div>
+          </div>
         </section>
 
         <section class="ingredients">
           <h2>Ingredients</h2>
-          <ul>
-            <li>2-3 large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </li>
-          </ul>
+          <div class="ingredient-list">
+            <div class="ingredient-item">
+              <span class="dot"></span>
+              <p>2–3 large eggs</p>
+            </div>
+
+            <div class="ingredient-item">
+              <span class="dot"></span>
+              <p>Salt, to taste</p>
+            </div>
+
+            <div class="ingredient-item">
+              <span class="dot"></span>
+              <p>Pepper, to taste</p>
+            </div>
+
+            <div class="ingredient-item">
+              <span class="dot"></span>
+              <p>1 tablespoon of butter or oil</p>
+            </div>
+
+            <div class="ingredient-item">
+              <p>
+                <span class="dot"></span>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </p>
+            </div>
+          </div>
         </section>
+
+        <div class="line"></div>
 
         <section class="instructions">
           <h2>Instructions</h2>
-          <ol>
-            <li>
-              <strong> Beat the eggs:</strong>
-              In a bowl, beat the eggs with a pinch of salt and pepper until
-              they are well mixed. You can add a tablespoon of water or milk for
-              a fluffier texture.
-            </li>
-            <li>
-              <strong> Heat the pan:</strong>
-              Place a non-stick frying pan over medium heat and add butter or
-              oil.
-            </li>
-            <li>
-              <strong> Cook the omelette:</strong>
-              Once the butter is melted and bubbling, pour in the eggs. Tilt the
-              pan to ensure the eggs evenly coat the surface.
-            </li>
-            <li>
-              <strong> Add fillings (optional):</strong> When the eggs begin to
-              set at the edges but are still slightly runny in the middle,
-              sprinkle your chosen fillings over one half of the omelette.
-            </li>
-            <li>
-              <strong> Fold and serve:</strong> As the omelette continues to
-              cook, carefully lift one edge and fold it over the fillings. Let
-              it cook for another minute, then slide it onto a plate.
-            </li>
-            <li>
-              <strong> Enjoy:</strong> Serve hot, with additional salt and
-              pepper if needed.
-            </li>
-          </ol>
+          <div class="instruction-list">
+            <div class="instruction-item">
+              <span class="number">1.</span>
+              <p>
+                <strong>Beat the eggs: </strong>In a bowl, beat the eggs with a
+                pinch of salt and pepper until they are well mixed. You can add
+                a tablespoon of water or milk for a fluffier texture.
+              </p>
+            </div>
+            <div class="instruction-item">
+              <span class="number">2.</span>
+              <p>
+                <strong>Heat the pan: </strong>Place a non-stick frying pan over
+                medium heat and add butter or oil.
+              </p>
+            </div>
+            <div class="instruction-item">
+              <span class="number">3.</span>
+              <p>
+                <strong>Cook the omelette: </strong>Once the butter is melted
+                and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </p>
+            </div>
+            <div class="instruction-item">
+              <span class="number">4.</span>
+              <p>
+                <strong>Add fillings (optional): </strong>When the eggs begin to
+                set at the edges but are still slightly runny in the middle,
+                sprinkle your chosen fillings over one half of the omelette.
+              </p>
+            </div>
+            <div class="instruction-item">
+              <span class="number">5.</span>
+              <p>
+                <strong>Fold and serve: </strong>As the omelette continues to
+                cook, carefully lift one edge and fold it over the fillings. Let
+                it cook for another minute, then slide it onto a plate.
+              </p>
+            </div>
+            <div class="instruction-item">
+              <span class="number">6.</span>
+              <p>
+                <strong>Enjoy: </strong>Serve hot, with additional salt and
+                pepper if needed.
+              </p>
+            </div>
+          </div>
         </section>
 
+        <div class="line"></div>
+
         <section class="nutrition">
-          <h2>Nutrition</h2>
-          <p>
-            The table below shows nutritional values per serving without the
-            additional fillings.
-          </p>
-          <table>
-            <tr>
-              <td>Calories</td>
-              <td>277kcal</td>
-            </tr>
-            <tr>
-              <td>Carbs</td>
-              <td>0g</td>
-            </tr>
-            <tr>
-              <td>Protein</td>
-              <td>20g</td>
-            </tr>
-            <tr>
-              <td>Fat</td>
-              <td>22g</td>
-            </tr>
-          </table>
+          <div class="nutrition-list">
+            <h2>Nutrition</h2>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+            <div class="nutrition-row">
+              <span class="label">Calories</span>
+              <span class="value">277kcal</span>
+            </div>
+
+            <div class="line"></div>
+
+            <div class="nutrition-row">
+              <span class="label">Carbs</span>
+              <span class="value">0gr</span>
+            </div>
+
+            <div class="line"></div>
+
+            <div class="nutrition-row">
+              <span class="label">Protein</span>
+              <span class="value">20g</span>
+            </div>
+
+            <div class="line"></div>
+
+            <div class="nutrition-row">
+              <span class="label">Fat</span>
+              <span class="value">22g</span>
+            </div>
+          </div>
         </section>
       </article>
     </main>
