Refactor: Replace ellipse images with CSS-based .dot styling in .preparation section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <img src="assets/images/image-omelette.jpeg" alt="omelette picture" />
         </figure>
 
-        <div class="text-content">
-          <section class="title">
+        <div class="title-content">
+          <section>
             <h1>Simple Omelette Recipe</h1>
             <p>
               An easy and quick dish, perfect for any meal. This classic
@@ -38,18 +38,18 @@
           <h3>Preparation time</h3>
           <div class="prep-list">
             <div class="prep-item">
-              <span class="dot"></span>
-              <p><strong>Total:</strong> Approximately 10 minutes</p>
+              <span class="dot"> </span>
+              <p><strong>Total: </strong>Approximately 10 minutes</p>
             </div>
 
             <div class="prep-item">
-              <span class="dot"></span>
-              <p><strong>Preparation:</strong> 5 minutes</p>
+              <span class="dot"> </span>
+              <p><strong>Preparation: </strong>5 minutes</p>
             </div>
 
             <div class="prep-item">
-              <span class="dot"></span>
-              <p><strong>Cooking:</strong> 5 minutes</p>
+              <span class="dot"> </span>
+              <p><strong>Cooking: </strong>5 minutes</p>
             </div>
           </div>
         </section>
