Refactor: structure all sections using utility classes and finalize layout consistency

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="title-content">
           <section>
             <h1>Simple Omelette Recipe</h1>
-            <p>
+            <p class="section-content">
               An easy and quick dish, perfect for any meal. This classic
               omelette combines beaten eggs cooked to perfection, optionally
               filled with your choice of cheese, vegetables, or meats.
@@ -34,52 +34,56 @@
           </section>
         </div>
 
-        <section class="preparation">
+        <section class="preparation section-box">
           <h3>Preparation time</h3>
-          <div class="prep-list">
-            <div class="prep-item">
-              <span class="dot"> </span>
-              <p><strong>Total: </strong>Approximately 10 minutes</p>
+          <div class="prep-list flex-column">
+            <div class="prep-item flex-row">
+              <span class="bullet"></span>
+              <p class="section-content">
+                <strong>Total: </strong>Approximately 10 minutes
+              </p>
             </div>
 
-            <div class="prep-item">
-              <span class="dot"> </span>
-              <p><strong>Preparation: </strong>5 minutes</p>
+            <div class="prep-item flex-row">
+              <span class="bullet"> </span>
+              <p class="section-content">
+                <strong>Preparation: </strong>5 minutes
+              </p>
             </div>
 
-            <div class="prep-item">
-              <span class="dot"> </span>
-              <p><strong>Cooking: </strong>5 minutes</p>
+            <div class="prep-item flex-row">
+              <span class="bullet"></span>
+              <p class="section-content"><strong>Cooking: </strong>5 minutes</p>
             </div>
           </div>
         </section>
 
-        <section class="ingredients">
-          <h2>Ingredients</h2>
-          <div class="ingredient-list">
-            <div class="ingredient-item">
-              <span class="dot"></span>
-              <p>2–3 large eggs</p>
+        <section class="ingredients section-box">
+          <h2 class="section-heading">Ingredients</h2>
+          <div class="ingredient-list flex-column">
+            <div class="ingredient-item flex-row">
+              <span class="bullet"></span>
+              <p class="section-content">2–3 large eggs</p>
             </div>
 
-            <div class="ingredient-item">
-              <span class="dot"></span>
-              <p>Salt, to taste</p>
+            <div class="ingredient-item flex-row">
+              <span class="bullet"></span>
+              <p class="section-content">Salt, to taste</p>
             </div>
 
-            <div class="ingredient-item">
-              <span class="dot"></span>
-              <p>Pepper, to taste</p>
+            <div class="ingredient-item flex-row">
+              <span class="bullet"></span>
+              <p class="section-content">Pepper, to taste</p>
             </div>
 
-            <div class="ingredient-item">
-              <span class="dot"></span>
-              <p>1 tablespoon of butter or oil</p>
+            <div class="ingredient-item flex-row">
+              <span class="bullet"></span>
+              <p class="section-content">1 tablespoon of butter or oil</p>
             </div>
 
-            <div class="ingredient-item">
-              <p>
-                <span class="dot"></span>
+            <div class="ingredient-item flex-row">
+              <span class="bullet"></span>
+              <p class="section-content">
                 Optional fillings: cheese, diced vegetables, cooked meats, herbs
               </p>
             </div>
@@ -88,51 +92,51 @@
 
         <div class="line"></div>
 
-        <section class="instructions">
-          <h2>Instructions</h2>
-          <div class="instruction-list">
-            <div class="instruction-item">
+        <section class="instructions section-box">
+          <h2 class="section-heading">Instructions</h2>
+          <div class="instruction-list flex-column">
+            <div class="instruction-item flex-row">
               <span class="number">1.</span>
-              <p>
+              <p class="section-content">
                 <strong>Beat the eggs: </strong>In a bowl, beat the eggs with a
                 pinch of salt and pepper until they are well mixed. You can add
                 a tablespoon of water or milk for a fluffier texture.
               </p>
             </div>
-            <div class="instruction-item">
+            <div class="instruction-item flex-row">
               <span class="number">2.</span>
-              <p>
+              <p class="section-content">
                 <strong>Heat the pan: </strong>Place a non-stick frying pan over
                 medium heat and add butter or oil.
               </p>
             </div>
-            <div class="instruction-item">
+            <div class="instruction-item flex-row">
               <span class="number">3.</span>
-              <p>
+              <p class="section-content">
                 <strong>Cook the omelette: </strong>Once the butter is melted
                 and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
                 evenly coat the surface.
               </p>
             </div>
-            <div class="instruction-item">
+            <div class="instruction-item flex-row">
               <span class="number">4.</span>
-              <p>
+              <p class="section-content">
                 <strong>Add fillings (optional): </strong>When the eggs begin to
                 set at the edges but are still slightly runny in the middle,
                 sprinkle your chosen fillings over one half of the omelette.
               </p>
             </div>
-            <div class="instruction-item">
+            <div class="instruction-item flex-row">
               <span class="number">5.</span>
-              <p>
+              <p class="section-content">
                 <strong>Fold and serve: </strong>As the omelette continues to
                 cook, carefully lift one edge and fold it over the fillings. Let
                 it cook for another minute, then slide it onto a plate.
               </p>
             </div>
-            <div class="instruction-item">
+            <div class="instruction-item flex-row">
               <span class="number">6.</span>
-              <p>
+              <p class="section-content">
                 <strong>Enjoy: </strong>Serve hot, with additional salt and
                 pepper if needed.
               </p>
@@ -144,8 +148,8 @@
 
         <section class="nutrition">
           <div class="nutrition-list">
-            <h2>Nutrition</h2>
-            <p>
+            <h2 class="section-heading">Nutrition</h2>
+            <p class="section-content">
               The table below shows nutritional values per serving without the
               additional fillings.
             </p>
