Complete responsive recipe page matching Figma design

--- a/index.html
+++ b/index.html
@@ -62,27 +62,27 @@
           <h2 class="section-heading">Ingredients</h2>
           <div class="ingredient-list flex-column">
             <div class="ingredient-item flex-row">
-              <span class="bullet"></span>
+              <span class="ing-bullet bullet"></span>
               <p class="section-content">2–3 large eggs</p>
             </div>
 
             <div class="ingredient-item flex-row">
-              <span class="bullet"></span>
+              <span class="ing-bullet bullet"></span>
               <p class="section-content">Salt, to taste</p>
             </div>
 
             <div class="ingredient-item flex-row">
-              <span class="bullet"></span>
+              <span class="ing-bullet bullet"></span>
               <p class="section-content">Pepper, to taste</p>
             </div>
 
             <div class="ingredient-item flex-row">
-              <span class="bullet"></span>
+              <span class="ing-bullet bullet"></span>
               <p class="section-content">1 tablespoon of butter or oil</p>
             </div>
 
             <div class="ingredient-item flex-row">
-              <span class="bullet"></span>
+              <span class="ing-bullet bullet"></span>
               <p class="section-content">
                 Optional fillings: cheese, diced vegetables, cooked meats, herbs
               </p>
@@ -146,13 +146,13 @@
 
         <div class="line"></div>
 
-        <section class="nutrition">
-          <div class="nutrition-list">
-            <h2 class="section-heading">Nutrition</h2>
-            <p class="section-content">
-              The table below shows nutritional values per serving without the
-              additional fillings.
-            </p>
+        <section class="nutrition section-box">
+          <h2 class="section-heading">Nutrition</h2>
+          <p class="section-content">
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+          <div class="nutrition-table">
             <div class="nutrition-row">
               <span class="label">Calories</span>
               <span class="value">277kcal</span>
